CV simple cartes

--- a/competences.html
+++ b/competences.html
@@ -23,7 +23,6 @@
             <div class="Profil_section">
                 <h2><u><a href="profil.html">Profil</a></u></h2>
             </div>
-
             <div class="Formation_section">
                 <h2><u><a href="formation.html">Formation</a></u></h2>
             </div>
@@ -33,9 +32,16 @@
             </div>
 
             <div class="Competences_section">
-                <h2><u><a href="competences.html">Compétences</a></u></h2>
+                <h2>Compétences</h2>
+                <ul>
+                    <li>Développement web : HTML / CSS / JS / PHP, Wordpress, Framer, Bubble, Webflow</li>
+                    <li>Modélisation et animation 3D : Blender, Maya</li>
+                    <li>Montage vidéo : Premiere Pro, After Effects, Animate</li>
+                    <li>Design graphique : Suite Adobe (Photoshop, Illustrator, Indesign) </li>
+                    <li>Outils de collaboration : Notion, Trello</li>
+                    <li>Webdesign et UX/UI : Figma, Axure </li>
+                </ul>
             </div>
-
             <div class="Centres_d_interet_section">
                 <h2><u><a href="centres_interet.html">Centres d'intérêt</a></u></h2>
             </div>
@@ -44,7 +50,6 @@
             </div>
         </div>
     </div>
-
 </body>
 
 </html>
