--- a/formation.html
+++ b/formation.html
@@ -23,9 +23,18 @@
             <div class="Profil_section">
                 <h2><u><a href="profil.html">Profil</a></u></h2>
             </div>
-
             <div class="Formation_section">
-                <h2><u><a href="formation.html">Formation</a></u></h2>
+                <h2>Formation</h2>
+                <p><strong>Master Numérique : Enjeux et Technologies</strong> – 2025 / 2027</p>
+                <em>Université Paris 8 | Vincennes - Saint-Denis</em>
+
+                <p><strong>BUT Métiers du Multimédia et de l'Internet parcours création Numérique</strong> – 2022 / 2025
+                </p>
+                <em>IUT Sénart-Fontainebleau - UPEC</em>
+
+                <p><strong>Bac technologique STI2D | Option Systèmes d'Information et Numérique</strong> – 2019 / 2022
+                </p>
+                <em>Lycée Martin Luther King</em>
             </div>
 
             <div class="Experience_section">
@@ -35,7 +44,6 @@
             <div class="Competences_section">
                 <h2><u><a href="competences.html">Compétences</a></u></h2>
             </div>
-
             <div class="Centres_d_interet_section">
                 <h2><u><a href="centres_interet.html">Centres d'intérêt</a></u></h2>
             </div>
@@ -44,7 +52,6 @@
             </div>
         </div>
     </div>
-
 </body>
 
 </html>
