--- a/centres_interet.html
+++ b/centres_interet.html
@@ -23,7 +23,6 @@
             <div class="Profil_section">
                 <h2><u><a href="profil.html">Profil</a></u></h2>
             </div>
-
             <div class="Formation_section">
                 <h2><u><a href="formation.html">Formation</a></u></h2>
             </div>
@@ -35,16 +34,21 @@
             <div class="Competences_section">
                 <h2><u><a href="competences.html">Compétences</a></u></h2>
             </div>
-
             <div class="Centres_d_interet_section">
-                <h2><u><a href="centres_interet.html">Centres d'intérêt</a></u></h2>
+                <h2>Centres d'intérêt</h2>
+                <ul>
+                    <li>Sport (vélo, fitness)</li>
+                    <li>Animation 3D et modélisation</li>
+                    <li>Développement de jeux vidéos</li>
+                    <li>Cinéma</li>
+                    <li>Musique</li>
+                </ul>
             </div>
             <div class="Langues_section">
                 <h2><u><a href="langues.html">Langues</a></u></h2>
             </div>
         </div>
     </div>
-
 </body>
 
 </html>
