--- a/langues.html
+++ b/langues.html
@@ -23,7 +23,6 @@
             <div class="Profil_section">
                 <h2><u><a href="profil.html">Profil</a></u></h2>
             </div>
-
             <div class="Formation_section">
                 <h2><u><a href="formation.html">Formation</a></u></h2>
             </div>
@@ -35,16 +34,20 @@
             <div class="Competences_section">
                 <h2><u><a href="competences.html">Compétences</a></u></h2>
             </div>
-
             <div class="Centres_d_interet_section">
                 <h2><u><a href="centres_interet.html">Centres d'intérêt</a></u></h2>
             </div>
             <div class="Langues_section">
-                <h2><u><a href="langues.html">Langues</a></u></h2>
+                <h2>Langues</h2>
+                <ul>
+                    <li>Français : langue maternelle</li>
+                    <li>Anglais : intermédiaire</li>
+                    <li>Danois : notions</li>
+                    <li>Allemand : Débutant</li>
+                </ul>
             </div>
         </div>
     </div>
-
 </body>
 
 </html>
