--- a/profil.html
+++ b/profil.html
@@ -21,9 +21,16 @@
         </div>
         <div class="Monprofil">
             <div class="Profil_section">
-                <h2><u><a href="profil.html">Profil</a></u></h2>
-            </div>
+                <h2>Profil</h2>
+                <p>
+                    Je suis étudiant en Master 1 Numérique : enjeux et technologies, et titulaire d’un BUT Métiers du
+                    Multimédia et de l'Internet. J’ai un profil créatif orienté graphisme, animation et création de
+                    visuels.
 
+                    J’aime particulièrement donner vie à des projets à travers des designs, la 3D.
+
+                </p>
+            </div>
             <div class="Formation_section">
                 <h2><u><a href="formation.html">Formation</a></u></h2>
             </div>
@@ -35,7 +42,6 @@
             <div class="Competences_section">
                 <h2><u><a href="competences.html">Compétences</a></u></h2>
             </div>
-
             <div class="Centres_d_interet_section">
                 <h2><u><a href="centres_interet.html">Centres d'intérêt</a></u></h2>
             </div>
@@ -44,7 +50,6 @@
             </div>
         </div>
     </div>
-
 </body>
 
 </html>
