Ajout retour en arriere | je sais pas comment nommer mon push

--- a/competences.html
+++ b/competences.html
@@ -32,7 +32,7 @@
             </div>
 
             <div class="Competences_section">
-                <h2>Compétences</h2>
+                <h2><u><a href="vide.html">Compétences</a></u></h2>
                 <ul>
                     <li>Développement web : HTML / CSS / JS / PHP, Wordpress, Framer, Bubble, Webflow</li>
                     <li>Modélisation et animation 3D : Blender, Maya</li>
