--- a/profil.html
+++ b/profil.html
@@ -21,7 +21,7 @@
         </div>
         <div class="Monprofil">
             <div class="Profil_section">
-                <h2>Profil</h2>
+                <h2><u><a href="vide.html">Profil</a></u></h2>
                 <p>
                     Je suis étudiant en Master 1 Numérique : enjeux et technologies, et titulaire d’un BUT Métiers du
                     Multimédia et de l'Internet. J’ai un profil créatif orienté graphisme, animation et création de
