--- a/vide.html
+++ b/vide.html
@@ -35,14 +35,7 @@
                 <h2><u><a href="competences.html">Compétences</a></u></h2>
             </div>
             <div class="Centres_d_interet_section">
-                <h2><u><a href="vide.html">Centres d'intérêt</a></u></h2>
-                <ul>
-                    <li>Sport (vélo, fitness)</li>
-                    <li>Animation 3D et modélisation</li>
-                    <li>Développement de jeux vidéos</li>
-                    <li>Cinéma</li>
-                    <li>Musique</li>
-                </ul>
+                <h2><u><a href="centres_interet.html">Centres d'intérêt</a></u></h2>
             </div>
             <div class="Langues_section">
                 <h2><u><a href="langues.html">Langues</a></u></h2>
