Changement liens de retour vers index.html

--- a/centres_interet.html
+++ b/centres_interet.html
@@ -35,7 +35,7 @@
                 <h2><u><a href="competences.html">Compétences</a></u></h2>
             </div>
             <div class="Centres_d_interet_section">
-                <h2><u><a href="vide.html">Centres d'intérêt</a></u></h2>
+                <h2><u><a href="index.html">Centres d'intérêt</a></u></h2>
                 <ul>
                     <li>Sport (vélo, fitness)</li>
                     <li>Animation 3D et modélisation</li>
