--- a/formation.html
+++ b/formation.html
@@ -24,7 +24,7 @@
                 <h2><u><a href="profil.html">Profil</a></u></h2>
             </div>
             <div class="Formation_section">
-                <h2><u><a href="vide.html">Formation</a></u></h2>
+                <h2><u><a href="index.html">Formation</a></u></h2>
                 <p><strong>Master Numérique : Enjeux et Technologies</strong> – 2025 / 2027</p>
                 <em>Université Paris 8 | Vincennes - Saint-Denis</em>
 
