--- a/langues.html
+++ b/langues.html
@@ -38,7 +38,7 @@
                 <h2><u><a href="centres_interet.html">Centres d'intérêt</a></u></h2>
             </div>
             <div class="Langues_section">
-                <h2><u><a href="vide.html">Langues</a></u></h2>
+                <h2><u><a href="index.html">Langues</a></u></h2>
                 <ul>
                     <li>Français : langue maternelle</li>
                     <li>Anglais : intermédiaire</li>
