Formulaire de contact sur toute les pages

--- a/centres_interet.html
+++ b/centres_interet.html
@@ -48,6 +48,31 @@
                 <h2><u><a href="langues.html">Langues</a></u></h2>
             </div>
         </div>
+        <div class="Contact_section">
+            <h2><u>Contact</u></h2>
+
+            <form class="contact-form" action="#" method="post">
+
+                <div class="form-group">
+                    <label for="nom">Nom</label>
+                    <input type="text" id="nom" name="nom" required placeholder="Veuillez entrer votre nom et prénom">
+                </div>
+
+                <div class="form-group">
+                    <label for="email">Adresse email</label>
+                    <input type="email" id="email" name="email" required placeholder="nom.prenom@gmail.com">
+                </div>
+
+                <div class="form-group">
+                    <label for="message">Message</label>
+                    <textarea id="message" name="message" rows="4" required
+                        placeholder="Veuillez entrer votre message"></textarea>
+                </div>
+
+                <button type="submit">Envoyer</button>
+
+            </form>
+        </div>
     </div>
 </body>
 
